--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -10,9 +10,9 @@
   </head>
 
   <body>
+    <%= render 'layouts/navbar' %>
     <div class="container <%= controller_name %> <%= action_name %>">
       <%= yield %>
     </div>
   </body>
 </html>
-vrefrdsf
