--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -6,16 +6,19 @@
           <%= link_to 'Blog', root_path, class: "nav-link #{yield(:blog_active)}" %>
         </li>
         <li class="list-group-item">
-          <%= link_to 'About', about_path, class: "nav-link #{:about_active}" %>
+          <%= link_to 'About', about_path, class: "nav-link #{yield(:about_active)}" %>
         </li>
         <li class="list-group-item">
-          <%= link_to 'Contact', contact_path, class: "nav-link #{:contact_active}" %>
+          <%= link_to 'Contact', contact_path, class: "nav-link #{yield(:contact_active)}" %>
+        </li>
+        <li class="list-group-item">
+          <%= link_to 'My Posts', author_posts_path, class: "nav-link #{yield(:author)}" %>
         </li>
       </ul>
     </div>
   </div>
-</div>
- -->
+</div> -->
+
 <nav class="navbar navbar-light bg-faded">
   <div class="container">
     <a href="/" class="navbar-brand">
@@ -33,6 +36,9 @@
       </li>
       <li class="nav-item">
         <%= link_to 'Contact', contact_path, class: "nav-link #{yield(:contact_active)}" %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'My Posts', author_posts_path, class: "nav-link #{yield(:author)}" %>
       </li>
     </ul>
   </div>
