--- a/app/views/authors/posts/_form.html.erb
+++ b/app/views/authors/posts/_form.html.erb
@@ -1,46 +1,71 @@
 <%= form_for(post, url: url) do |form| %>
-  <% if post.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h2>
+<% if post.errors.any? %>
+<div id="error_explanation">
+  <h2><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h2>
 
-      <ul>
-      <% post.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
+  <ul>
+    <% post.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+    <% end %>
+  </ul>
+</div>
+<% end %>
+
+<div class="row">
+  <div class="column-md-4">
+
+    <div class="card">
+      <div class="card-block">
+        <% if @post.new_record? %>
+          <h4 class="card-title">New post</h4>
+        <% else %>
+          <h4 class="card-title">
+            <b>Edit</b>
+            <span class="thin-text"><%= @post.title %></span>
+          </h4>
+        <% end %>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">
+          <div class="field">
+            <%= form.label :title %>
+            <%= form.text_field :title, class: 'form-control' %>
+          </div>
+        </li>
+        <li class="list-group-item">
+          <div class="field">
+            <%= form.label :banner_image_url %>
+            <%= form.text_field :banner_image_url, class: 'form-control' %>
+          </div>
+        </li>
+        <li class="list-group-item">
+          <div class="field">
+            <%= form.label :description %>
+            <%= form.text_area :description, class: 'form-control' %>
+          </div>
+        </li>
+        <li class="list-group-item">
+          <div class="actions">
+            <%= form.submit "Save blog post", class: 'btn btn-success btn-block' %>
+          </div>
+        </li>
       </ul>
     </div>
-  <% end %>
 
-  <div class="row">
-    <div class="column-md-2">
-      <div class="field">
-        <%= form.label :title %>
-        <%= form.text_field :title %>
-      </div>
+    <% if @post.persisted? %>
+    <%= link_to 'Show', @post %> |
+    <% end %>
+    <%= link_to 'Back', authors_posts_path %>
+  </div>
+  <div class="col-md-8">
 
-      <div class="field">
-        <%= form.label :banner_image_url %>
-        <%= form.text_field :banner_image_url %>
-      </div>
-
-      <div class="field">
-        <%= form.label :description %>
-        <%= form.text_area :description %>
-      </div>
-    </div>
-
-    <div class="col-md-10">
-      <div class="field">
-        <%= form.label :body %>
-        <%= form.text_area :body %>
-      </div>
+    <div class="field">
+      <%= form.text_area :body %>
     </div>
   </div>
+</div>
 
 
 
 
-  <div class="actions">
-    <%= form.submit %>
-  </div>
 <% end %>
