All backend done

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,9 @@
+// @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "util";
 @import "colors";
+@import "base";
 @import "navbar";
 @import "posts";
+@import "banner";
+@import "title";
