--- a/app/assets/stylesheets/_colors.scss
+++ b/app/assets/stylesheets/_colors.scss
@@ -1,1 +1,9 @@
-$light-gray: #f7f7f9;
+$light-gray:            #f7f7f9;
+$dark-primary-color:    #512DA8;
+$default-primary-color: #673AB7;
+$light-primary-color:   #D1C4E9;
+$text-primary-color:    #FFFFFF;
+$accent-color:          #03A9F4;
+$primary-text-color:    #212121;
+$secondary-text-color:  #757575;
+$divider-color:         #BDBDBD;
