--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -1,15 +1,32 @@
 .navbar {
   border-radius: 0;
   margin-bottom: 20px;
+  font-family: Arial;
+  background: #ADA996;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  padding: 0;
   .navbar-brand {
     font-weight: bolder;
+    color: black;
     .light {
-      font-weight: 300
+      font-weight: 300;
+      color: white;
     }
   }
-  .navbar-toggler {
+  .navbar-expand-* {
     outline: none;
   }
+  .nav-link {
+    color: black !important;
+    &.active {
+      color: white !important;
+    }
+  }
+}
+
+.navbar li {
+  display:inline-block;
 }
 
 .collapse-bg {
@@ -28,7 +45,7 @@
   border-color: black;
   a {
     background-color: #1a1a1a;
-    color: #bdc3c7;
+    color: black;
     width: 100%;
     height: 100%;
     padding: 10px;
@@ -38,3 +55,29 @@
     }
   }
 }
+
+.navbar-logo {
+  display: flex;
+    float: left;
+      img {
+      height: 40px;
+      width: 40px;
+     }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
