--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -2,9 +2,9 @@
   .card {
     border: none;
     border-radius: 0;
-    border-bottom: 1px solid #181818;
     height: 400px;
     margin-bottom: 20px;
+    background-color: white;
     .card-topper {
       height: 200px;
       width: 100%;
@@ -13,18 +13,10 @@
     }
     .card-block {
       padding: 10px;
-      .btn-read {
-        background-color: #e8e8e8;
-        font-weight: 300;
-        border-radius: 0;
-        color: black;
-        &:hover {
-          background-color: #d8d8d8;
-        }
       }
       .card-title {
         font-size: 1.3rem;
-        margin-bottom: 0.5rem;
+        margin-bottom: 0.7rem;
         a {
           color: black;
           text-decoration: none;
@@ -39,10 +31,10 @@
       }
       .card-text {
         font-size: 0.9rem;
+        color: black;
       }
     }
   }
-}
 
 
 
@@ -95,3 +87,6 @@
   }
 }
 
+h1 {
+  text-align: center;
+}
