--- a/app/assets/stylesheets/_colors.scss
+++ b/app/assets/stylesheets/_colors.scss
@@ -7,3 +7,5 @@ $accent-color:          #03A9F4;
 $primary-text-color:    #212121;
 $secondary-text-color:  #757575;
 $divider-color:         #BDBDBD;
+$pop-green: #06D6A9;
+$pop-black: #171F24;
