--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -5,11 +5,14 @@
     height: 400px;
     margin-bottom: 20px;
     background-color: white;
+    border-radius: 25px;
     .card-topper {
       height: 200px;
       width: 100%;
       background-size: cover;
       background-position: center;
+      border-top-left-radius: 25px;
+      border-top-right-radius: 25px;
     }
     .card-block {
       padding: 10px;
