--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -15,5 +15,6 @@
     <div class="container <%= controller_name %> <%= action_name %>">
       <%= yield %>
     </div>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
