--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,105 @@
-<div class="demo">
-  <h1>CSS “Always on the bottom” Footer</h1>
+<section id="photos">
+  <li class="photostream"><%= image_tag "katie1.jpg" %></li>
+  <li class="photostream"><%= image_tag "katie2.jpg" %></li>
+  <li class="photostream"><%= image_tag "katie3.jpg" %></li>
+  <li class="photostream"><%= image_tag "katie4.jpg" %></li>
+  <li class="photostream"><%= image_tag "katie5.jpg" %></li>
+  <li class="photostream"><%= image_tag "katie6.jpg" %></li>
+  <li class="photostream"><%= image_tag "katie7.jpg" %></li>
+  <li class="photostream"><%= image_tag "katie8.jpg" %></li>
+</section>
 
-  <p>I often find myself designing a website where the footer must rest at the bottom of the page, even if the content above it is too short to push it to the bottom of the viewport naturally.</p>
-
-  <p>However, if the content is taller than the user’s viewport, then the footer should disappear from view as it would normally, resting at the bottom of the page (not fixed to the viewport).</p>
-
-  <p>If you know the height of the footer, then you should set it explicitly, and set the bottom padding of the footer’s parent element to be the same value (or larger if you want some spacing).</p>
-
-  <p>This is to prevent the footer from overlapping the content above it, since it is being removed from the document flow with <code>position: absolute;</code>.</p>
+<footer class="page-footer font-small blue pt-4">
+  <div class="container-fluid text-center text-md-left">
+    <div class="row">
+      <div class="col-md-4 mt-md-0 mt-3">
+        <h5 "text-uppercase">Hiking and Trekking Communities</h5>
+        <ul class="list-unstyled">
+        <li>
+         <a class="footerlink" href="https://hikinglady.com/get-outside/organizations/" target="_blank">Hiking Lady</a>
+       </li>
+       <li>
+        <a class="footerlink" href="https://www.amnesty.org.uk/international-treks" target="_blank">Amnesty International</a>
+      </li>
+      <li>
+        <a class="footerlink" href="https://www.treksandtrailsinternational.com/" target="_blank">Treks and Trails</a>
+      </li>
+      <li>
+        <a class="footerlink" href="https://www.tourradar.com/f/hiking-trekking" target="_blank">Tour Radar</a>
+      </li>
+      <li>
+        <a class="footerlink" href="http://www.walksworldwide.com/home.html" target="_blank">Walks World Wide</a>
+      </li>
+    </ul>
+    </div>
+    <hr class="clearfix w-100 d-md-none pb-3">
+    <div class="col-md-4 mb-md-0 mb-3">
+      <h5 class="text-uppercase">Hiking Info</h5>
+      <ul class="list-unstyled">
+        <li>
+         <a class="footerlink" href="https://dailyburn.com/life/fitness/best-hiking-trails-world/" target="_blank">10 Most Majestic Hiking Trails</a>
+       </li>
+       <li>
+        <a class="footerlink" href="https://www.thehikinglife.com/resources/websites/" target="_blank">The Hiking Life</a>
+      </li>
+      <li>
+        <a class="footerlink" href="https://www.shape.com/fitness/tips/hiking-trails-survivalist-tips" target="_blank">Hiker Survival Skills</a>
+      </li>
+      <li>
+        <a class="footerlink" href="https://www.lifewire.com/hiking-gps-apps-1683617" target="_blank">Best Hiking Apps</a>
+      </li>
+      <li>
+        <a class="footerlink" href="https://www.livefortheoutdoors.com/trailmagazine/" target="_blank">Trail Magazine</a>
+      </li>
+    </ul>
+  </div>
+  <div class="col-md-4 mb-md-0 mb-3">
+    <h5 class="text-uppercase">Contact</h5>
+    <ul class="list-unstyled">
+      <li>
+        <a class="footerlink" href="https://www.facebook.com/katie.hollier.5" target="_blank">Facebook</a>
+      </li>
+      <li>
+        <a class="footerlink" href="#!">Instagram</a>
+      </li>
+      <li>
+        <a class="footerlink" href="#!">Email</a>
+      </li>
+    </ul>
+  </div>
 </div>
+</div>
+<div class="footer-copyright text-center py-3">© 2018 Copyright:
+  <a class="footerlink" href="#"> KH Hikes</a>
+</div>
+</footer>
 
-<div class="footer">This footer will always be positioned at the bottom of the page, but <strong>not fixed</strong>.</div>
+
+
+ <!--  <a href="https://dailyburn.com/life/fitness/best-hiking-trails-world/" target="_blank">10 Most Majestic Hiking Trails</a>
+  <a href="https://www.thehikinglife.com/resources/websites/" target="_blank">The Hiking Life</a>
+  <a href="https://www.shape.com/fitness/tips/hiking-trails-survivalist-tips" target="_blank">Hiker Survival Skills</a>
+  <a href="https://www.lifewire.com/hiking-gps-apps-1683617" target="_blank">Best Hiking Apps</a>
+  <a href="https://www.livefortheoutdoors.com/trailmagazine/" target="_blank">Trail Magazine</a>
+</div> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
