--- a/app/views/layouts/author.html.erb
+++ b/app/views/layouts/author.html.erb
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= yield(:page_title) %> | BellaBlog</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<head>
+  <title><%= yield(:page_title) %> | BellaBlog</title>
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-      <script src="https://cloud.tinymce.com/stable/tinymce.min.js"></script>
-  </head>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <script src="https://cloud.tinymce.com/stable/tinymce.min.js"></script>
+</head>
 
-  <body>
-    <%= render 'layouts/navbar' %>
-    <% if notice || alert %>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <% end %>
-    <div class="container <%= controller_name %> <%= action_name %>">
-      <%= yield %>
+<body>
+  <%= render 'layouts/navbar' %>
+  <div class="container <%= controller_name %> <%= action_name %>">
+    <% if flash.any?  %>
+    <% flash.keys.each do |key| %>
+    <div class="alert alert-<%= key.to_s %> alert-dismissable" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"></button>
+      <span aria-hidden="true">&times;</span>
+      <%= flash[key] %>
     </div>
-  </body>
+    <% end %>
+    <% end %>
+
+    <%= yield %>
+  </div>
+  <%= render 'layouts/footer' %>
+</body>
 </html>
