--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,12 +8,11 @@
   <li class="photostream"><%= image_tag "katie7.jpg" %></li>
   <li class="photostream"><%= image_tag "katie8.jpg" %></li>
 </section>
-
-<footer class="page-footer font-small blue pt-4">
-  <div class="container-fluid text-center text-md-left">
+<footer class="page-footer font-small blue pt-4 greenback">
+  <div class="container-fluid text-center text-md-left greenback">
     <div class="row">
       <div class="col-md-4 mt-md-0 mt-3">
-        <h5 "text-uppercase">Hiking and Trekking Communities</h5>
+        <h5 "text-uppercase">Hiking & Trekking Communities</h5>
         <ul class="list-unstyled">
         <li>
          <a class="footerlink" href="https://hikinglady.com/get-outside/organizations/" target="_blank">Hiking Lady</a>
@@ -69,7 +68,7 @@
   </div>
 </div>
 </div>
-<div class="footer-copyright text-center py-3">© 2018 Copyright:
+<div class="footer-copyright text-center py-3 greenback">© 2018 Copyright:
   <a class="footerlink" href="#"> KH Hikes</a>
 </div>
 </footer>
