--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -2,10 +2,8 @@
   border-radius: 0;
   margin-bottom: 20px;
   font-family: Arial;
-  background: #304352;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #d7d2cc, #304352);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #d7d2cc, #304352); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  padding: 10px;
+  background: #06D6A9;
+  padding: 5px;
   .navbar-brand {
     font-weight: bolder;
     color: black;
@@ -18,9 +16,9 @@
     outline: none;
   }
   .nav-link {
-    color: black !important;
+    color: white !important;
     &.active {
-      color: white !important;
+      color: black !important;
     }
   }
 }
