--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -2,10 +2,12 @@
   .card {
     border: none;
     border-radius: 0;
-    height: 400px;
+    height: 430px;
     margin-bottom: 20px;
     background-color: white;
     border-radius: 25px;
+    background-color: #FFF;
+    box-shadow: 0px 0px 0px 0 rgba(0, 0, 0, 0), 6px 6px 0px 0px $pop-green;
     .card-topper {
       height: 200px;
       width: 100%;
