--- a/app/assets/stylesheets/_title.scss
+++ b/app/assets/stylesheets/_title.scss
@@ -3,7 +3,7 @@
   src:url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/209981/Decovar-VF.ttf');
 }
 
-h1 {
+h10 {
   margin-left: 60px;
   margin-right: 60px;
   font-size: 10vw;
@@ -22,14 +22,14 @@ h1 {
   background-repeat: repeat;
 
   text-shadow: 2px 2px 5px rgba(#2a4308, 0.4);
-  animation: grow 4s linear infinite;
+  animation: grow 7s linear infinite;
 
   &:before {
     text-shadow:
-      1px 1px 2px rgba(#2a4308, 0.5),
-      -1px 1px 2px rgba(#2a4308, 0.5),
-      -1px -1px 2px rgba(#2a4308, 0.5),
-      1px -1px 2px rgba(#2a4308, 0.5),
+      1px 1px 2px rgba($pop-green, 0.5),
+      -1px 1px 2px rgba($pop-green, 0.5),
+      -1px -1px 2px rgba($pop-green, 0.5),
+      1px -1px 2px rgba($pop-green, 0.5),
       3px 3px 20px rgba(#000, 0.5);
   }
 
@@ -60,7 +60,7 @@ html {
 //   height: 100%;
 // }
 
-h1 {
+h10 {
   display: flex;
   align-items: center;
   justify-content: center;
