--- a/app/assets/stylesheets/_util.scss
+++ b/app/assets/stylesheets/_util.scss
@@ -1,19 +1,19 @@
 .thin-text { font-weight: 300; }
 
 .apple_pagination {
-  background: #f1f1f1;
-  border: 1px solid #e5e5e5;
+  background: #f7f7f9;
+  border: 1px solid #f7f7f9;
   text-align: center;
   padding: 1em;
   cursor: default; }
   .apple_pagination a, .apple_pagination span {
     padding: 0.2em 0.3em; }
   .apple_pagination .disabled {
-    color: #aaaaaa; }
+    color: #06D6A9; }
   .apple_pagination .current {
     font-style: normal;
     font-weight: bold;
-    background-color: #bebebe;
+    background-color: #06D6A9;
     display: inline-block;
     width: 1.4em;
     height: 1.4em;
@@ -24,6 +24,6 @@
     text-shadow: rgba(255, 255, 255, 0.8) 1px 1px 1px; }
   .apple_pagination a {
     text-decoration: none;
-    color: black; }
+    color: #06D6A9; }
     .apple_pagination a:hover, .apple_pagination a:focus {
       text-decoration: underline; }
