Footer photos done

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,13 @@
-<section id="photos">
-  <li class="photostream"><%= image_tag "katie1.jpg" %></li>
-  <li class="photostream"><%= image_tag "katie2.jpg" %></li>
-  <li class="photostream"><%= image_tag "katie3.jpg" %></li>
-  <li class="photostream"><%= image_tag "katie4.jpg" %></li>
-  <li class="photostream"><%= image_tag "katie5.jpg" %></li>
-  <li class="photostream"><%= image_tag "katie6.jpg" %></li>
-  <li class="photostream"><%= image_tag "katie7.jpg" %></li>
-  <li class="photostream"><%= image_tag "katie8.jpg" %></li>
-</section>
+<div class="photo-container">
+  <div><%= image_tag "katie1.jpg" %></div>
+  <div><%= image_tag "katie2.jpg" %></div>
+  <div><%= image_tag "katie3.jpg" %></div>
+  <div><%= image_tag "katie4.jpg" %></div>
+  <div><%= image_tag "katie5.jpg" %></div>
+  <div><%= image_tag "katie6.jpg" %></div>
+  <div><%= image_tag "katie7.jpg" %></div>
+  <div><%= image_tag "katie8.jpg" %></div>
+</div>
 <footer class="page-footer font-small blue pt-4 greenback">
   <div class="container-fluid text-center text-md-left greenback">
     <div class="row">
