--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -21,64 +21,78 @@ a {
 
 
 
-// Footer photos
-
-.photostream {
-  height: 70px;
-  width: 40px;
+.photo-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(112px, 1fr));
+    grid-template-rows: repeat(1, 112px);
+    margin-top: 360px;
 }
 
-#photos {
-  /* Prevent vertical gaps */
-  line-height: 0;
-
-  -webkit-column-count: 5;
-  -webkit-column-gap:   0px;
-  -moz-column-count:    5;
-  -moz-column-gap:      0px;
-  column-count:         5;
-  column-gap:           0px;
-  width: 100vw;
+.photo-container > div > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
-#photos img {
-  /* Just in case there are inline attributes */
-  width: 230px !important;
-  height: 150px !important;
-}
 
-  #photos li {
-    list-style-type: none;
-  }
 
-@media (max-width: 1200px) {
-  #photos {
-  -moz-column-count:    4;
-  -webkit-column-count: 4;
-  column-count:         8;
-  }
-}
-@media (max-width: 1000px) {
-  #photos {
-  -moz-column-count:    3;
-  -webkit-column-count: 3;
-  column-count:         8;
-  }
-}
-@media (max-width: 800px) {
-  #photos {
-  -moz-column-count:    2;
-  -webkit-column-count: 2;
-  column-count:         4;
-  }
-}
-@media (max-width: 400px) {
-  #photos {
-  -moz-column-count:    1;
-  -webkit-column-count: 1;
-  column-count:         4;
-  }
-}
+
+
+
+
+
+
+// .photostream {
+//   height: 70px;
+//   width: 40px;
+// }
+
+// #photos {
+//   /* Prevent vertical gaps */
+//   line-height: 0;
+//     display: block;
+//     width: 100%;
+//     height: 100%;
+// }
+
+// #photos img {
+//   /* Just in case there are inline attributes */
+//   width: 260px !important;
+//   height: 150px !important;
+// }
+
+//   #photos li {
+//     list-style-type: none;
+//   }
+
+// @media (max-width: 1200px) {
+//   #photos {
+//   -moz-column-count:    4;
+//   -webkit-column-count: 4;
+//   column-count:         8;
+//   }
+// }
+// @media (max-width: 1000px) {
+//   #photos {
+//   -moz-column-count:    3;
+//   -webkit-column-count: 3;
+//   column-count:         8;
+//   }
+// }
+// @media (max-width: 800px) {
+//   #photos {
+//   -moz-column-count:    2;
+//   -webkit-column-count: 2;
+//   column-count:         4;
+//   }
+// }
+// @media (max-width: 400px) {
+//   #photos {
+//   -moz-column-count:    1;
+//   -webkit-column-count: 1;
+//   column-count:         4;
+//   }
+// }
 
 
 
