--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -4,6 +4,7 @@
   font-family: Arial;
   background: #06D6A9;
   padding: 5px;
+  margin-bottom: 50px;
   .navbar-brand {
     font-weight: bolder;
     color: black;
