--- a/app/assets/stylesheets/_title.scss
+++ b/app/assets/stylesheets/_title.scss
@@ -8,6 +8,7 @@ h10 {
   margin-right: 60px;
   font-size: 10vw;
   position: relative;
+  margin-bottom: 50px;
 
   // Variable font
   font-family: "Decovar Regular24";
