--- a/app/views/authors/accounts/edit.html.erb
+++ b/app/views/authors/accounts/edit.html.erb
@@ -2,7 +2,7 @@
   <!-- bio section -->
   <%= form_tag authors_info_path, method: :put do %>
   <%= fields_for :author do |f| %>
-  <div class="column-md-6">
+  <div class="container column-md-6">
     <div class="card">
       <div class="card-block">
         <div class="card-title">
