--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -9,7 +9,7 @@
   <div><%= image_tag "katie8.jpg" %></div>
 </div>
 <footer class="page-footer font-small blue pt-4 greenback">
-  <div class="container-fluid text-center text-md-left greenback">
+  <div class="container-fluid text-center text-md-center greenback">
     <div class="row">
       <div class="col-md-4 mt-md-0 mt-3">
         <h5 "text-uppercase">Hiking & Trekking Communities</h5>
