--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light bg-faded">
-  <div class="container">
+  <div class="container-fluid">
     <div class="navbar-logo">
       <%= image_tag "climb.svg" %>
     </div>
