--- a/app/views/layouts/author.html.erb
+++ b/app/views/layouts/author.html.erb
@@ -8,6 +8,7 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   <script src="https://cloud.tinymce.com/stable/tinymce.min.js"></script>
+  <%= favicon_link_tag asset_path('hiking.png') %>
 </head>
 
 <body>
