--- a/app/views/layouts/_banner.html.erb
+++ b/app/views/layouts/_banner.html.erb
@@ -1,6 +1,8 @@
 <div id="stage">
-<a><%= image_tag "5.jpg" %></a>
-<a><%= image_tag "6.jpg" %></a>
-<a><%= image_tag "7.png" %></a>
-<a><%= image_tag "8.jpg" %></a>
+  <a><%= image_tag "5.jpg" %></a>
+  <a><%= image_tag "6.jpg" %></a>
+  <a><%= image_tag "7.png" %></a>
+  <a><%= image_tag "8.jpg" %></a>
+  <div id="banner-saying">"Hiking is just walking where it's okay to pee." - Demetri Martin
+  </div>
 </div>
