--- a/app/assets/stylesheets/_colors.scss
+++ b/app/assets/stylesheets/_colors.scss
@@ -9,3 +9,8 @@ $secondary-text-color:  #757575;
 $divider-color:         #BDBDBD;
 $pop-green: #06D6A9;
 $pop-black: #171F24;
+$bp-small: 48em; // 768px
+$bp-medium: 64em; // 1024px
+$bp-large: 85.375em; // 1366px
+$bp-xlarge: 120em; // 1920px
+$bp-xxlarge: 160em; // 2560px
