About me section done

--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -11,7 +11,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p, p span {
-  font-family: 'Merriweather', serif !important;
+  font-family: 'Italianno', cursive !important;
 }
 
 .published {
@@ -22,7 +22,7 @@ p, p span {
 .tags {
   font-size: 12px;
   font-style: italic;
-  color: $pop-green;
+  color: blue;
 }
 
 
