--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -1,8 +1,8 @@
 .navbar {
   border-radius: 0;
   margin-bottom: 20px;
-  font-family: Arial;
-  background: #06D6A9;
+  font-family: 'Italianno', cursive;
+  background: $pop-green;
   padding: 5px;
   margin-bottom: 50px;
   .navbar-brand {
