--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -31,8 +31,6 @@
         font-size: 0.8rem;
         color: #787878;
         font-weight: 300;
-        margin-top: 0.3rem;
-        margin-bottom: 0,3rem;
       }
       .card-text {
         font-size: 0.9rem;
@@ -94,4 +92,8 @@
 
 h1 {
   text-align: center;
+}
+
+#back {
+  background-color: $pop-green;
 }
