--- a/app/views/blog/pages/about.html.erb
+++ b/app/views/blog/pages/about.html.erb
@@ -1,1 +1,12 @@
-<% provide(:about_active, 'active') %>
+<div class="about-me">
+  <h2>About Me</h2>
+  <div class="col-left">
+      <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/42301074_10155735442241696_8100012633232506880_o.jpg?_nc_cat=106&_nc_ht=scontent-lhr3-1.xx&oh=907fccf42dea608dff3dc60d13ee84e6&oe=5C89C36D" alt="Hiking Photo" class="abouts-pic">
+
+  </div>
+  <div class="col-right">
+    <h4>Katie Hollier</h4>
+    <p id="about-me-paragraph">Hello, my name is Katie</p>
+    <p id="about-me-paragraph">Let me know what you want me to put in this about section bella. :)</p>
+  </div>
+</div>
