--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -4,7 +4,7 @@
   padding-bottom: 10px;
 }
 
-a {
+.footerlink {
   color: #FFF;
   font-family: "Montserrat", "sans-serif";
     &:hover {
@@ -30,7 +30,7 @@ a {
 
 .photo-container > div > img {
     width: 100%;
-    height: 100%;
+    height: 110%;
     object-fit: cover;
 }
 
