--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -11,7 +11,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p, p span {
-  font-family: 'Italianno', cursive !important;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .published {
@@ -20,7 +20,7 @@ p, p span {
 }
 
 .tags {
-  font-size: 12px;
+  font-size: 11px;
   font-style: italic;
   color: blue;
 }
