Contact and about pages completed

--- a/app/views/blog/pages/contact.html.erb
+++ b/app/views/blog/pages/contact.html.erb
@@ -1,1 +1,27 @@
 <% provide(:contact_active, 'active') %>
+
+<div class="contact-me">
+  <h2>Contact Me!</h2>
+  <br>
+  <div class="col-left">
+      <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/18221810_319390251812928_5497733213238924006_n.jpg?_nc_cat=106&_nc_ht=scontent-lhr3-1.xx&oh=a8c585c44668246d0ad4922f167d2d33&oe=5C833208" alt="Hiking Photo" class="abouts-pic">
+  </div>
+  <div class="col-right">
+    <h4>Katie Hollier</h4>
+    <br>
+    <p id="contact-me-paragraph">Hello! I'm a British travel blogger whose fulfilling her passion of hiking around the world. KH Hikes is all about long-term hiking</p>
+    <p id="contact-me-paragraph">Feel free to contact me on any tips or advice you need for long haul hiking</p>
+    <br>
+    <div class="contact-me-icons">
+    <a href="https://www.facebook.com/katie.hollier.5">
+      <img class="icon" src="<%= image_path('facebook.svg') %>" />
+    </a>
+    <a href="">
+      <img class="icon" src="<%= image_path('instagram.svg') %>" />
+    </a>
+    <a href="mailto:katie.hollier@me.com">
+      <img class="icon" src="<%= image_path('message-closed-envelope.svg') %>" />
+    </a>
+    </div>
+  </div>
+</div>
