--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -31,6 +31,8 @@
         font-size: 0.8rem;
         color: #787878;
         font-weight: 300;
+        font-size: 10px;
+        font-style: italic;
       }
       .card-text {
         font-size: 0.9rem;
@@ -38,7 +40,6 @@
       }
     }
   }
-
 
 
 .posts.edit, .posts.new {
