--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -2,7 +2,7 @@
   .card {
     border: none;
     border-radius: 0;
-    height: 430px;
+    height: 100%;
     margin-bottom: 20px;
     background-color: white;
     border-radius: 25px;
@@ -21,14 +21,13 @@
       }
       .card-title {
         font-size: 1.3rem;
-        margin-bottom: 0.7rem;
+        margin-bottom: 0.25rem;
         a {
           color: black;
           text-decoration: none;
         }
       }
       .published-date {
-        font-size: 0.8rem;
         color: #787878;
         font-weight: 300;
         font-size: 10px;
